--- a/app/src/main/res/layout/rating.xml
+++ b/app/src/main/res/layout/rating.xml
@@ -22,5 +22,8 @@
         android:layout_height="wrap_content"
         android:text="Abschicken"
         android:id="@+id/button"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+
+        />
+
 </LinearLayout>
