--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,4 +1,11 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:id="@+id/map" tools:context=".Home"
-    android:name="com.google.android.gms.maps.SupportMapFragment" />
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/map"
+    tools:context=".Home"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
+    map:cameraTargetLat="50.938056"
+    map:cameraTargetLng="6.956944"
+    map:cameraZoom="11"/>
