--- a/app/src/main/res/layout/rating.xml
+++ b/app/src/main/res/layout/rating.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
-        android:id="@+id/textView"
+        android:id="@+id/name"
         android:layout_gravity="center_horizontal" />
 
     <RatingBar
